[package]
name = "asc_monte_carlo"
version = "0.1.0"
authors = ["Timothy Middlemas <tm17@princeton.edu>"]
edition = "2018"
build = "build.rs"

# https://stackoverflow.com/questions/27632660/how-do-i-use-conditional-compilation-with-cfg-and-cargo
[features]
using_make = []

[build-dependencies]
vergen = "3"
rustc_version = "0.2"

[dependencies]
rand = "0.7.0"
rand_xoshiro = "0.3.1"
rand_distr = "0.2.1"
itertools = "0.8.0"
lazy_static = "1.4.0"
structopt = "0.3"
rayon = "1.1.0"
chrono = "0.4"
nalgebra = "0.18.0"
GSL = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
libc = "0.2"
kiss3d = "0.25"
